--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,9 +2,9 @@ version: "3.8"
 
 services:
   uploader:
-    build: uploader
+    build: ./uploader
     container_name: uploader
-    command: python -m app
+    command: gunicorn -w 2 --threads 2 -b 0.0.0.0:5000 app:app
     expose:
       - 5000
     networks:
@@ -21,13 +21,12 @@ services:
       FLASK_APP: /projects/uploader/app.py
       FLASK_ENV: production
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5040/ping"]
+      test: ["CMD", "curl", "-f", "http://localhost:5000/ping"]
       interval: 1m
       timeout: 5s
       retries: 2
 
   nginx:
-#    build: ./nginx
     image: nginx:1.19
     container_name: nginx
     ports:
