--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,25 +29,37 @@ services:
   nginx:
     image: nginx:1.19
     container_name: nginx
+    command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
     ports:
       - "80:80"
       - "443:443"
     depends_on:
       - uploader
+      - certbot
     volumes:
+      - ./data/nginx:/etc/nginx/conf.d
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
       - nginx_log_volume:/var/log/nginx
     networks:
       - uploader-networks
-    deploy:
-      restart_policy:
-        condition: on-failure
+#    deploy:
+#      restart_policy:
+#        condition: on-failure
     environment:
       TZ: Asia/Seoul
     healthcheck:
       test: ["CMD", "service", "nginx", "status"]
-      interval: 1m
+      interval: 5m
       timeout: 5s
       retries: 2
+  certbot:
+    image: certbot/certbot
+    container_name: certbot
+    volumes:
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
 
 networks:
   uploader-networks:
