Update NGINX config

--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -1,24 +1,32 @@
+upstream uploader-upstream {
+    server uploader:5000;
+}
+
 server {
     listen 80;
-    server_name example.org;
-    location / {
-        return 301 https://$host$request_uri;
-    }
+    server_name upload-now-box.cf;
+
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
+    }
+
+    if ($http_x_forwarded_proto != "https") {
+        rewrite ^ https://$host$request_uri? permanent;
     }
 }
 server {
     listen 443 ssl;
-    server_name example.org;
+    server_name upload-now-box.cf;
 
     ssl_certificate /etc/letsencrypt/live/upload-now-box.cf/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/upload-now-box.cf/privkey.pem;
 
-    include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-
     location / {
-        proxy_pass http://upload-now-box.cf; #for demo purposes
+        proxy_pass http://uploader-upstream;
+        proxy_redirect off;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
