--- a/.github/workflows/reviewdog.yaml
+++ b/.github/workflows/reviewdog.yaml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       # Install specific version black (this step is not required. default is "black[jupyter]")
-      - run: pip install black==23.1.0
+      - run: pip install black
       - uses: reviewdog/action-black@v3
         with:
           github_token: ${{ secrets.github_token }}
