fix: Change action

--- a/.github/workflows/reviewdog.yaml
+++ b/.github/workflows/reviewdog.yaml
@@ -1,18 +1,14 @@
 name: reviewdog
 on: [ pull_request ]
 jobs:
-  linter_name:
-    name: runner / black formatter
+  pyright:
+    name: pyright
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      # Install specific version black (this step is not required. default is "black[jupyter]")
-      - run: pip install black
-      - uses: reviewdog/action-black@v3
+      - uses: actions/checkout@v2
+      - uses: jordemort/action-pyright@v1
         with:
-          github_token: ${{ secrets.github_token }}
-          # Change reviewdog reporter if you need [github-pr-check, github-check].
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           reporter: github-pr-check
-          # Change reporter level if you need.
-          # GitHub Status Check won't become failure with a warning.
+          lib: true
           level: info
