--- a/.github/workflows/reviewdog.yaml
+++ b/.github/workflows/reviewdog.yaml
@@ -9,7 +9,7 @@ jobs:
       - uses: jordemort/action-pyright@v1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }} # You need this
-          reporter: github-pr-checks # Change reporter.
+          reporter: github-pr-check # Change reporter.
 #          lib: true
           level: info
           workdir: uploader
