--- a/.github/workflows/reviewdog.yaml
+++ b/.github/workflows/reviewdog.yaml
@@ -1,5 +1,9 @@
 name: reviewdog
 on: [ pull_request ]
+env:
+  REPORTER: github-pr-review
+  WORKDIR: uploader
+  LEVEL: info
 jobs:
   review_pr:
     name: Review PR
@@ -7,27 +11,18 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: pip install -r requirements.txt
-      - uses: jordemort/action-pyright@v1
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }} # You need this
-          reporter: github-pr-review # Change reporter.
-          lib: true
-          level: info
-          workdir: uploader
-          python_platform: Linux
-          python_version: 3.11
       - uses: tsuyoshicho/action-mypy@v3
         with:
           github_token: ${{ secrets.github_token }}
-          reporter: github-pr-review
-          level: info
-          workdir: uploader
+          reporter: $REPORTER
+          workdir: $WORKDIR
+          level: $LEVEL
       - uses: jordemort/action-pyright@v1
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }} # You need this
-          reporter: github-pr-review # Change reporter.
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          reporter: $REPORTER
+          workdir: $WORKDIR
+          level: $LEVEL
           lib: true
-          level: info
-          workdir: uploader
           python_platform: Linux
           python_version: 3.11
